// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`banner 1`] = `
"// minimal.d.ts
/* My Banner */
//#region tests/fixtures/minimal.d.ts
declare function foo(): void;
//#endregion
export { foo };
/* My Footer minimal.d.ts */"
`;

exports[`basic 1`] = `
"// basic.d.ts
//#region tests/fixtures/basic.d.ts
declare const foo: number;
type SomeType<T> = T;
type FooType = string;
interface Interface {}
declare function fn(arg0: SomeType<FooType>, opt: Interface): void;
declare enum Enum {
  A = 0,
  B = 1,
  C = 2,
}
declare class Cls {
  foo: string;
  fn(e: Enum): void;
}
//#endregion
export { Cls, Enum, fn, foo };
// basic.js
//#region tests/fixtures/basic.ts
const foo = 42;
function fn(arg0, opt) {}
let Enum = /* @__PURE__ */ function(Enum$1) {
	Enum$1[Enum$1["A"] = 0] = "A";
	Enum$1[Enum$1["B"] = 1] = "B";
	Enum$1[Enum$1["C"] = 2] = "C";
	return Enum$1;
}({});
var Cls = class {
	foo;
	fn(e) {}
};

//#endregion
export { Cls, Enum, fn, foo };"
`;

exports[`cjs exports 1`] = `
"// cjs-exports.js

//#region tests/fixtures/cjs-exports.ts
var cjs_exports_default = 42;

//#endregion
module.exports = cjs_exports_default;"
`;

exports[`cjs exports 2`] = `
"// cjs-exports.d.ts
//#region tests/fixtures/cjs-exports.d.ts
declare const _default: number;
export = _default;"
`;

exports[`declare module 1`] = `
"// declare-module.d.ts
//#region tests/fixtures/declare-module.d.ts
declare module "virtual" {
  const _default: string;
  export default _default;
}"
`;

exports[`dts input > custom chunk name 1`] = `
"// chunks/DqALGAwS-types.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User };
// input1.d.ts
import { User } from "./chunks/DqALGAwS-types.js";

//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
import { User } from "./chunks/DqALGAwS-types.js";

//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`dts input > default chunk name 1`] = `
"// input1.d.mts
import { User } from "./types-VwSK8P_f.js";

//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.mts
import { User } from "./types-VwSK8P_f.js";

//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };
// types-VwSK8P_f.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User };"
`;

exports[`dts input > input array 1`] = `
"// dts-input.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`dts input > input object 1`] = `
"// index.d.ts
//#region tests/fixtures/dts-input.d.ts
declare class Foo {}
//#endregion
export { Foo };"
`;

exports[`entryFileNames > custom chunk name 1`] = `
"// chunks/DqALGAwS-types.d.ts
//#region tests/fixtures/dts-multi-input/types.d.ts
interface User {
  id: string;
  name: string;
}
//#endregion
export { User };
// input1.d.ts
import { User } from "./chunks/DqALGAwS-types.js";

//#region tests/fixtures/dts-multi-input/input1.d.ts
interface ApiResponse {
  data: User;
}
//#endregion
export { ApiResponse };
// input2.d.ts
import { User } from "./chunks/DqALGAwS-types.js";

//#region tests/fixtures/dts-multi-input/input2.d.ts
interface UserWithAge extends User {
  age: number;
}
//#endregion
export { UserWithAge };"
`;

exports[`entryFileNames > default chunk name 1`] = `
"// input1.d.mts
import { Input2 } from "./input2-CzdQ8V-e.js";

//#region tests/fixtures/alias/input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// input2-CzdQ8V-e.d.ts
//#region tests/fixtures/alias/shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region tests/fixtures/alias/input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { Input2, input2 };
// input2.d.mts
import { Input2, input2 } from "./input2-CzdQ8V-e.js";
export { Input2, input2 };"
`;

exports[`input alias 1`] = `
"// input2-CcmD5Ns-.d.ts
//#region shared.d.ts
interface Shared {
  shared: string;
}
declare const shared: Shared;
//#endregion
//#region input2.d.ts
interface Input2 extends Shared {
  input2: string;
}
declare const input2: Input2;
//#endregion
export { Input2, input2 };
// input2-LCiYuoaZ.js
//#region shared.ts
const shared = { shared: "shared" };

//#endregion
//#region input2.ts
const input2 = {
	...shared,
	input2: "input2"
};

//#endregion
export { input2 };
// output1.d.ts
import { Input2 } from "./input2-CcmD5Ns-.js";

//#region input1.d.ts
interface Input1 extends Input2 {
  input1: string;
}
declare const input1: Input1;
//#endregion
export { Input1, input1 };
// output1.js
import { input2 } from "./input2-LCiYuoaZ.js";

//#region input1.ts
const input1 = {
	...input2,
	input1: "input1"
};

//#endregion
export { input1 };
// output2/index.d.ts
import { Input2, input2 } from "../input2-CcmD5Ns-.js";
export { Input2, input2 };
// output2/index.js
import { input2 } from "../input2-LCiYuoaZ.js";

export { input2 };"
`;

exports[`paths 1`] = `
"// index.d.ts
//#region tests/fixtures/paths/mod.d.ts
declare const foo = 42;
//#endregion
export { foo };"
`;

exports[`resolve dts 1`] = `
"// index.d.ts
//#region tests/fixtures/resolve-dts/mod.d.ts
type Foo = string;
//#endregion
export { Foo };
// index.js
"
`;

exports[`tree-shaking 1`] = `
"// index.d.ts
//#region tests/fixtures/tree-shaking/mod.d.ts

type A = string;
//#endregion
export { type A };
// index.js
"
`;

exports[`tsx 1`] = `
"// tsx.d.ts
import { JSX } from "solid-js";

//#region tests/fixtures/tsx.d.ts
declare function createComponent(): JSX.HTMLAttributes<HTMLElement>;
//#endregion
export { createComponent };
// tsx.js
import { jsx } from "react/jsx-runtime";

//#region tests/fixtures/tsx.tsx
function createComponent() {
	return /* @__PURE__ */ jsx("div", {});
}

//#endregion
export { createComponent };"
`;

exports[`type-only export 1`] = `
"// index.d.ts
//#endregion
//#region tests/fixtures/type-only-export/mod.d.ts
declare class A {}
declare class B {}
declare namespace namespace_d_exports {
  export { ns };
}
declare const ns = 42;
//#endregion
//#region tests/fixtures/type-only-export/all.d.ts
declare const all = 42;
//#endregion
export { A as RuntimeA, type A as TypeA, type B as TypeB, A as TypeC, all, type namespace_d_exports as ns };"
`;
